fix: erstatte spacing med units i alle komponenter

--- a/packages/jokul/src/components/datepicker/styles/_calendar-date-button.scss
+++ b/packages/jokul/src/components/datepicker/styles/_calendar-date-button.scss
@@ -54,7 +54,7 @@
     margin: var(--jkl-calendar-date-margin);
 
     padding: 0;
-    padding-top: jkl.$spacing-2; // adjust visual alignment of text
+    padding-top: jkl.$unit-02; // adjust visual alignment of text
     @include jkl.motion("entrance", "energetic");
     transition-property: color, background-color, box-shadow;
 
