--- a/packages/jokul/src/components/datepicker/styles/_calendar-navigation-dropdown.scss
+++ b/packages/jokul/src/components/datepicker/styles/_calendar-navigation-dropdown.scss
@@ -45,6 +45,6 @@
     }
 
     & + & {
-        margin-inline-start: var(--jkl-spacing-8);
+        margin-inline-start: var(--jkl-unit-10);
     }
 }
