--- a/packages/jokul/src/components/datepicker/styles/_calendar.scss
+++ b/packages/jokul/src/components/datepicker/styles/_calendar.scss
@@ -1,20 +1,20 @@
 @use "../../../core/jkl";
 
 @include jkl.comfortable-density-variables {
-    --jkl-calendar-padding: var(--jkl-spacing-12) var(--jkl-spacing-16)
-        var(--jkl-spacing-16);
-    --jkl-calendar-gap: var(--jkl-spacing-12);
+    --jkl-calendar-padding: var(--jkl-unit-15) var(--jkl-unit-20)
+        var(--jkl-unit-20);
+    --jkl-calendar-gap: var(--jkl-unit-15);
 
     // Custom tweaks for iPhone SE
     @include jkl.screen-to(375px) {
-        --jkl-calendar-padding: var(--jkl-spacing-4) var(--jkl-spacing-8)
-            var(--jkl-spacing-16);
+        --jkl-calendar-padding: var(--jkl-unit-05) var(--jkl-unit-10)
+            var(--jkl-unit-20);
     }
 }
 
 @include jkl.compact-density-variables {
-    --jkl-calendar-padding: var(--jkl-spacing-4) var(--jkl-spacing-8)
-        var(--jkl-spacing-16);
+    --jkl-calendar-padding: var(--jkl-unit-05) var(--jkl-unit-10)
+        var(--jkl-unit-20);
     --jkl-calendar-gap: 0;
 }
 
