--- a/packages/jokul/src/components/file-input/styles/_file.scss
+++ b/packages/jokul/src/components/file-input/styles/_file.scss
@@ -2,19 +2,19 @@
 @use "../../../core/jkl/colors";
 
 @include jkl.comfortable-density-variables {
-    --jkl-file-padding: #{jkl.$spacing-24};
-    --jkl-file-thumbnail-size: #{jkl.rem(64px)};
-    --jkl-file-gap: #{jkl.$spacing-16};
+    --jkl-file-padding: #{jkl.$unit-30};
+    --jkl-file-thumbnail-size: #{jkl.$unit-80};
+    --jkl-file-gap: #{jkl.$unit-20};
     --jkl-file-font-size: #{jkl.rem(20px)};
-    --jkl-file-line-height: #{jkl.rem(32px)};
+    --jkl-file-line-height: #{jkl.$unit-40};
 }
 
 @include jkl.compact-density-variables {
     --jkl-file-padding: #{jkl.$spacing-12};
     --jkl-file-thumbnail-size: #{jkl.rem(44px)};
-    --jkl-file-gap: #{jkl.$spacing-8};
-    --jkl-file-font-size: #{jkl.rem(16px)};
-    --jkl-file-line-height: #{jkl.rem(24px)};
+    --jkl-file-gap: #{jkl.$unit-10};
+    --jkl-file-font-size: #{jkl.$unit-20};
+    --jkl-file-line-height: #{jkl.$unit-30};
 }
 
 .jkl-file {
@@ -94,7 +94,7 @@
     }
 
     &__delete {
-        padding: 0 var(--jkl-spacing-24);
+        padding: 0 var(--jkl-unit-30);
         align-items: stretch;
 
         &:hover {
@@ -146,7 +146,7 @@
         flex-direction: column;
         flex: 1 1 auto;
         overflow-wrap: break-word;
-        gap: var(--jkl-spacing-8);
+        gap: var(--jkl-unit-10);
     }
 
     &__title {
@@ -167,7 +167,7 @@
     &__description {
         display: flex;
         flex-wrap: nowrap;
-        gap: jkl.$spacing-12;
+        gap: jkl.$unit-15;
         align-items: center;
         justify-content: flex-start;
     }
